feat: responsividade e refatoração

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Calendário de Jogos - NLW Copa</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body >
     <div id="app">
-        
+        <header>
+            <img src="assets/logo.svg" alt="Logo da NLW">
+        </header>
+        <main id="cards"></main>
     </div>
     <script src="main.js"></script>
 </body>
